# Book-Management

./: CMakeLists.txt  README.md  add.cpp  add.h  book.cpp  book.h  book_tables.sql  connect.cpp  connect.h  delete.cpp  delete.h  edit.cpp  edit.h  history.cpp  history.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  search.cpp  search.h
